Adding only_active parameter to get_dags endpoint
