# airflow/api_connexion/endpoints/dag_endpoint.py
@@ -59,11 +59,21 @@ def get_dag_details(dag_id):
 
 @security.requires_access([(permissions.ACTION_CAN_READ, permissions.RESOURCE_DAG)])
 @format_parameters({'limit': check_limit})
-def get_dags(limit, offset=0):
+def get_dags(limit, offset=0, only_active=False):
     """Get all DAGs."""
     readable_dags = current_app.appbuilder.sm.get_readable_dags(g.user)
-    dags = readable_dags.order_by(DagModel.dag_id).offset(offset).limit(limit).all()
-    total_entries = readable_dags.count()
+    if only_active:
+        dags = (
+            readable_dags.filter(DagModel.is_active)
+            .order_by(DagModel.dag_id)
+            .offset(offset)
+            .limit(limit)
+            .all()
+        )
+        total_entries = readable_dags.filter(DagModel.is_active).count()
+    else:
+        dags = readable_dags.order_by(DagModel.dag_id).offset(offset).limit(limit).all()
+        total_entries = readable_dags.count()
 
     return dags_collection_schema.dump(DAGCollection(dags=dags, total_entries=total_entries))
 
